fixed the profile circle size on mobile

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -113,8 +113,8 @@
     text-align: center;
   }
   #profile .section__pic-container {
-    width: 150px;
-    height: 150px;
+    width: 200px;
+    height: 200px;
     flex-shrink: 0;
     margin: 0 auto;
   }
